RESOLVED FIXED202062
[FTW] Resolve crashes found while running canvas tests
https://bugs.webkit.org/show_bug.cgi?id=202062
Summary [FTW] Resolve crashes found while running canvas tests
Brent Fulgham
Reported 2019-09-20 16:49:52 PDT
The canvas Layout tests revealed roughly 24 crashes. This patch corrects a number of problems: 1. BitmapImage cannot create ID2D1Bitmaps without a render target. However, some code paths allowed a nullptr target to be used. 2. Direct2D will not allow you to draw an ID2D1Bitmap to itself. We need to create a copy. 3. Consolidate the empty 'State' class in PlatformContextDirect2D with the separate stack of rendering state. This was cruft left over from before the PlatformContextDirect2D code was in place. This simplifies a lot of the code, and avoids some cases where the stacks were not in sync.
Attachments
Patch (24.04 KB, patch)
2019-09-20 17:12 PDT, Brent Fulgham
no flags
Brent Fulgham
Comment 1 2019-09-20 17:12:29 PDT
Brent Fulgham
Comment 2 2019-09-20 17:18:00 PDT
With the patch there are no crashes (but 145 failures!). Fixing failures next.
WebKit Commit Bot
Comment 3 2019-09-21 19:40:50 PDT
Comment on attachment 379287 [details] Patch Clearing flags on attachment: 379287 Committed r250188: <https://trac.webkit.org/changeset/250188>
WebKit Commit Bot
Comment 4 2019-09-21 19:40:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-09-21 19:41:20 PDT
Note You need to log in before you can comment on or make changes to this bug.